[fix] float-panel z-index

--- a/source/css/_common/device.styl
+++ b/source/css/_common/device.styl
@@ -14,6 +14,7 @@
   bottom: 2rem
   float: right
   transform: translateZ(1px)
+  z-index: 10
   display: flex
   flex-direction: column
   border-radius: $border-bar
